--- a/web/css/site.css
+++ b/web/css/site.css
@@ -6,26 +6,32 @@
     height: 65px;
     }
 .m-1{
-    margin: 1px;
+    margin: 4px;
 }
 .m-2{
-    margin: 2px;
+    margin: 8px;
 }
 .m-3{
-    margin: 3px;
+    margin: 12px;
 }
 .m-10{
-    margin: 10px;
+    margin: 20px;
 }
 .p-1{
-    padding: 1px;
+    padding: 4px;
 }
 .p-2{
-    padding: 2px;
+    padding: 8px;
 }
 .p-3{
-    padding: 3px;
+    padding: 12px;
 }
 .p-10{
-    padding: 10px;
+    padding: 20px;
+}
+.btn{
+    border-radius: 10px;
+} 
+.btn-blog {
+    border-radius: 10px;
 }
